# caption-train

./: .gitignore  CAPTIONS.md  Dockerfile  LICENSE  README.md  compile_captions.py  enhance_captions.py  evaluate-and-improve.py  find_missing_captions.py  inference.py  inference_florence.py  pyproject.toml  requirements.txt  server.py  train.py  train2.py  train4.py  train_blip_peft.py  train_florence.py  train_florence_lora.py  train_florence_peft.py
.github/workflows/: test.yml
caption_train/: __init__.py  captions.py  datasets.py  llm.py  opt.py  ratelimit.py  trainer.py  util.py  vlm.py
caption_train/tests/: test_llm.py  test_ratelimit.py
docs/: ITERATIVE_CAPTION_TRAINING.md  README.md  blip.md  datasets.md  enhance-captions.md  florence.md  installation.md  uv-extras.md
docs/advanced/: README.md  caption_enhancement.md  caption_improvement.md  data_utils.md  image_viewer.md  servers.md  training_techniques.md  utils.md
docs/models/: README.md  blip.md  florence.md  git.md  moondream.md  qwen.md
iterative/: README.md  caption_server.py  index.html  main.css  main.js  schema.py  server.py  test_schema.py  websocket.py  websocket_client.py  websocket_server.py
scripts/: README.md  enhance_captions.py  extract_tags.py  find_missing_captions.py  find_words.py  image_features_florence.py  qwen-2.5-vl.py
scripts/inference/: README.md  inference.py  inference_florence.py  moondream.py
scripts/models/: fine-tune-blip-using-peft.py  moondream.py
scripts/servers/: README.md  florence2_captioning_server.py  gallery.py  generic_captioning_server.py  image_gallery_server.py  server.py
scripts/training/: README.md  fine_tune_blip_using_peft.py  train3.py  train_blip.py  train_florence.py  train_git.py
scripts/utils/: README.md  clip-score-improvement.py  compile_captions.py  semantic-similarity.py  swinv2.py
src/caption_train/: captions.py  datasets.py  llm.py  opt.py  ratelimit.py  trainer.py  util.py  vlm.py
src/caption_train/inference/: sampling.py
src/caption_train/models/: blip.py  florence.py
src/caption_train/servers/: __init__.py  base.py
src/caption_train/training/: pipeline.py
src/caption_train/utils/: __init__.py  arguments.py  config.py  server.py
tests/: test_llm.py  test_ratelimit.py
tests/caption_train/: test_captions.py  test_datasets.py  test_inference_sampling.py  test_llm.py  test_models_blip.py  test_models_florence.py  test_opt.py  test_ratelimit.py  test_trainer.py  test_training_pipeline.py  test_training_scripts.py  test_util.py  test_utils_arguments.py  test_utils_config.py  test_vlm.py
tests/servers/: test_base_server.py
tests/utils/: test_server.py
viewer/: README.md  index.html  main.css  main.js  server.py  viewer.py
