[tool.poetry]
name = "caption-train"
version = "0.1.0"
description = ""
authors = ["rockerBOO <rockerboo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
marshmallow = "^3.20.1"
pytest = "^7.4.3"
prodigyopt = "^1.0"
evaluate = "^0.4.1"
wandb = "^0.16.0"
torchmetrics = "^1.2.0"
jiwer = "^3.0.3"
transformers = "^4.48.0"
bitsandbytes = "^0.41.3.post2"
scikit-learn = "^1.3.2"
requests = "^2.32.2"
accelerate = "^0.26.1"

[tool.black]
line-length = 79

[tool.ruff]
line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
