[project]
name = "caption-train"
version = "0.1.0"
description = "Caption trainer using models like Florence 2"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "accelerate>=1.2.1",
  "bitsandbytes>=0.45.0",
  "datasets>=2.20.0",
  "numpy<2",
  "einops>=0.8.0",
  "evaluate>=0.4.3",
  "open-clip-torch>=2.30.0",
  "peft>=0.14.0",
  "pillow>=11.1.0",
  "prodigy-plus-schedule-free>=1.9.0",
  "prodigyopt>=1.1.1",
  "pytest>=8.3.4",
  "python-dotenv>=1.0.1",
  "transformers>=4.48.0",
  "wandb>=0.19.3",
  "timm>=1.0.13",
]

[project.optional-dependencies]
flash_attn = [
  "flash-attn>=2.7.4.post1",
]
janus = [
  "janus",
]
server = [
  "fastapi[standard]>=0.115.8",
  "gradio>=5.18.0",
]
gpu_metrics = [
  "pynvml>=12.0.0",
]
onnx = [
  "onnxruntime-gpu>=1.20.1",
]
llm = [
  "openai",
]
cpu = [
  "torch>=2.6.0",
  "torchvision>=0.21.0",
]
cu124 = [
  "torch>=2.6.0",
  "torchvision>=0.21.0",
]

[dependency-groups]
dev = [
  "caption-train",
  "ruff>=0.9.7",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu124" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu124", extra = "cu124" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu124", extra = "cu124" },
]
janus = { git = "https://github.com/deepseek-ai/Janus.git" }
caption-train = { workspace = true }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E501"]

[tool.pytest]
testpaths = ["caption_train/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
  "-v",
]
pythonpath = [
  ".",
]
minversion = "6.0"
